--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,3 +75,14 @@ textarea:-webkit-autofill:focus {
   -webkit-text-fill-color: #a3a4aa !important;
   color: #a3a4aa !important; /* Оставляем цвет текста */
 }
+
+.sr-only{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
